# IsoCross

./: .gitignore  README.md
dev/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  compile_commands.json
dev/.cache/clangd/index/: SceneManager.cpp.B6DDD4F874E46F87.idx  SceneManager.h.0696A2785F750C2E.idx  Shader.h.059A372D92DC1983.idx  Source.cpp.4125700D2164095C.idx  Sprite.cpp.352F09C6453EB105.idx  Sprite.h.E95613A247F7EFF6.idx  Tile.cpp.589F2B4FD24CA86F.idx  Tile.h.BFAC4F75A4FA66BB.idx  glad.c.D152ABC901FED68E.idx  glad.h.073E944FC1BE0C26.idx  khrplatform.h.E72BD5A185C395CC.idx  stb_image.cpp.7CEE977C3FC32828.idx  stb_image.h.8C80FD13014B49FA.idx
dev/include/: Character.h  SceneManager.h  Shader.h  Sprite.h  Tile.h
dev/maps/: dev_test.tilemap  dev_test_top.tilemap
dev/src/: Character.cpp  SceneManager.cpp  Source.cpp  Tile.cpp
dev/textures/: Slector.xcf  characters.xcf
